feat(agent-framework): 符合 agentskills.io 规范的 skill 解析 + 降级加载
- OafConfig.SkillConfig 新增 license、compatibility、metadata 字段
- OafConfigLoader 新增 name 验证（长度、格式、连续连字符）
- OafConfigLoader 新增 description 验证（非空、长度）
- OafConfigLoader 支持官方 allowed-tools 字段（空格分隔）
- 验证逻辑改为降级加载：不符合规范时警告但继续加载
- 新增 34 个测试用例覆盖所有官方规范场景
- 214 个测试全部通过